# remote-streamer-control-poc

./: Cargo.toml  Procfile  README.md
src/: encoder.rs  main.rs  messages.rs  server.rs  streamer.rs
