[package]
name = "rscpoc"
version = "0.1.0"
authors = ["Tsung-Ju Lii <usefulalgorithm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rscpoc-server"
path = "src/main.rs"

[[bin]]
name = "rscpoc-encoder"
path = "src/encoder.rs"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix = "0.9.0"
actix-web-actors = "2.0.0"
rand = "0.7.3"
bytes = "0.5.6"
byteorder = "1.3.4"
futures = "0.3.5"
env_logger = "0.7.1"
log = "0.4.11"
awc = "1.0.1"
actix-codec = "0.2.0"
